declare 500 code reformat code

--- a/src/openapi/api-doc.yaml
+++ b/src/openapi/api-doc.yaml
@@ -50,3 +50,5 @@ paths:
                 properties:
                   message:
                     type: string
+        '5XX':
+          description: Unexpected server error.
